[gd_scene load_steps=22 format=2]

[ext_resource path="res://Veri/Kodlar/BINALAR/SAVUNMA TANKI.gd" type="Script" id=1]
[ext_resource path="res://Veri/Resimler/BINALAR/SAVUNMA TANKI.png" type="Texture" id=2]
[ext_resource path="res://Veri/Resimler/ATES.png" type="Texture" id=3]
[ext_resource path="res://Veri/Resimler/Daire.png" type="Texture" id=4]
[ext_resource path="res://Veri/Kodlar/Value.gd" type="Script" id=5]
[ext_resource path="res://Veri/Yazi Tipi/Xolonium-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="Animation" id=3]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 6 )

[node name="SAVUNMA TANKI" type="Area2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_left = -44.0
margin_top = -28.0
margin_right = 20.0
margin_bottom = 36.0
texture = ExtResource( 4 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -56.0
margin_top = -40.0
margin_right = 56.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="TextureButton2" type="TextureButton" parent="TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Node2D2" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D2"]
position = Vector2( 0, 172 )

[node name="Position2D2" type="Position2D" parent="Node2D2"]
position = Vector2( 148, 84 )

[node name="Position2D3" type="Position2D" parent="Node2D2"]
position = Vector2( 148, -88 )

[node name="Position2D4" type="Position2D" parent="Node2D2"]
position = Vector2( 0, -172 )

[node name="Position2D5" type="Position2D" parent="Node2D2"]
position = Vector2( -148, -88 )

[node name="Position2D6" type="Position2D" parent="Node2D2"]
position = Vector2( -148, 84 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2( 0, 172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="Node2D"]
position = Vector2( 148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D2"]
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="Node2D"]
position = Vector2( 148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D3"]
shape = SubResource( 2 )

[node name="Area2D4" type="Area2D" parent="Node2D"]
position = Vector2( 0, -172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D4"]
shape = SubResource( 2 )

[node name="Area2D5" type="Area2D" parent="Node2D"]
position = Vector2( -148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D5"]
shape = SubResource( 2 )

[node name="Area2D6" type="Area2D" parent="Node2D"]
position = Vector2( -148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D6"]
shape = SubResource( 2 )

[node name="Node2D3" type="Node2D" parent="."]
visible = false
position = Vector2( -48, -48 )

[node name="1" type="TextureButton" parent="Node2D3"]
visible = false
margin_left = -16.0
margin_top = 152.0
margin_right = 112.0
margin_bottom = 288.0

[node name="Polygon2D2" type="Polygon2D" parent="Node2D3/1"]
position = Vector2( 64, 68 )
color = Color( 0, 0.627451, 0.713726, 0.415686 )
polygon = PoolVector2Array( -96, 0, -48, -84, 48, -84, 96, 0, 52, 84, -48, 84 )

[node name="2" type="TextureButton" parent="Node2D3"]
visible = false
margin_left = 132.0
margin_top = 64.0
margin_right = 260.0
margin_bottom = 200.0

[node name="Polygon2D2" type="Polygon2D" parent="Node2D3/2"]
position = Vector2( 64, 68 )
color = Color( 0, 0.627451, 0.713726, 0.415686 )
polygon = PoolVector2Array( -96, 0, -48, -84, 48, -84, 96, 0, 52, 84, -48, 84 )

[node name="3" type="TextureButton" parent="Node2D3"]
visible = false
margin_left = 132.0
margin_top = -112.0
margin_right = 260.0
margin_bottom = 24.0

[node name="Polygon2D2" type="Polygon2D" parent="Node2D3/3"]
position = Vector2( 64, 68 )
color = Color( 0, 0.627451, 0.713726, 0.415686 )
polygon = PoolVector2Array( -96, 0, -48, -84, 48, -84, 96, 0, 52, 84, -48, 84 )

[node name="4" type="TextureButton" parent="Node2D3"]
visible = false
margin_left = -16.0
margin_top = -196.0
margin_right = 112.0
margin_bottom = -60.0

[node name="Polygon2D2" type="Polygon2D" parent="Node2D3/4"]
position = Vector2( 64, 68 )
color = Color( 0, 0.627451, 0.713726, 0.415686 )
polygon = PoolVector2Array( -96, 0, -48, -84, 48, -84, 96, 0, 52, 84, -48, 84 )

[node name="5" type="TextureButton" parent="Node2D3"]
visible = false
margin_left = -164.0
margin_top = -112.0
margin_right = -36.0
margin_bottom = 24.0

[node name="Polygon2D2" type="Polygon2D" parent="Node2D3/5"]
position = Vector2( 64, 68 )
color = Color( 0, 0.627451, 0.713726, 0.415686 )
polygon = PoolVector2Array( -96, 0, -48, -84, 48, -84, 96, 0, 52, 84, -48, 84 )

[node name="6" type="TextureButton" parent="Node2D3"]
visible = false
margin_left = -164.0
margin_top = 60.0
margin_right = -36.0
margin_bottom = 196.0

[node name="Polygon2D2" type="Polygon2D" parent="Node2D3/6"]
position = Vector2( 64, 68 )
color = Color( 0, 0.627451, 0.713726, 0.415686 )
polygon = PoolVector2Array( -96, 0, -48, -84, 48, -84, 96, 0, 52, 84, -48, 84 )

[node name="Node2D4" type="Node2D" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="Node2D4" groups=["Ben 2"]]
visible = false
position = Vector2( 0, 172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D"]
shape = SubResource( 2 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Node2D4" groups=["Ben 2"]]
visible = false
position = Vector2( 148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D2"]
shape = SubResource( 2 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D2"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D2"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="Node2D4" groups=["Ben 2"]]
visible = false
position = Vector2( 148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D3"]
shape = SubResource( 2 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D3"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D3"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="KinematicBody2D4" type="KinematicBody2D" parent="Node2D4" groups=["Ben 2"]]
visible = false
position = Vector2( 0, -172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D4"]
shape = SubResource( 2 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D4"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D4"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="KinematicBody2D5" type="KinematicBody2D" parent="Node2D4" groups=["Ben 2"]]
visible = false
position = Vector2( -148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D5"]
shape = SubResource( 2 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D5"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D5"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="KinematicBody2D6" type="KinematicBody2D" parent="Node2D4" groups=["Ben 2"]]
visible = false
position = Vector2( -148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D6"]
shape = SubResource( 2 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D6"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D6"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="Timer4" type="Timer" parent="."]
autostart = true

[node name="Timer5" type="Timer" parent="."]
autostart = true

[node name="Timer6" type="Timer" parent="."]
autostart = true

[node name="ProgressBar" type="Label" parent="."]
margin_left = -64.0
margin_top = -96.0
margin_right = 64.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 15 )
align = 1
valign = 1
script = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_SAVUNMA_TANKI_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SAVUNMA_TANKI_body_exited"]
[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D3" to="." method="_on_Area2D3_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D4" to="." method="_on_Area2D4_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D4" to="." method="_on_Area2D4_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D5" to="." method="_on_Area2D5_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D5" to="." method="_on_Area2D5_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D6" to="." method="_on_Area2D6_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D6" to="." method="_on_Area2D6_body_exited"]
[connection signal="pressed" from="Node2D3/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Node2D3/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Node2D3/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Node2D3/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Node2D3/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Node2D3/6" to="." method="_on_6_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
